--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,13 @@
 <!-- home.component.html -->
 <div class="home-container">
-    <!-- Sección de la imagen de fondo con texto centrado -->
-    <div class="hero-section">
-      <div class="hero-image">
-        <div class="hero-text">
-          <h1>Desarrollo Web Profesional</h1>
-          <p>"8° cuatrimestre"</p>
-        </div>
+  <div class="hero-section">
+    <div class="hero-image">
+      <!-- Imagen cargada directamente desde HTML -->
+      <img src="/img/fondo.jpg" alt="Fondo hero" class="hero-background">
+      <div class="hero-text">
+        <h1>Desarrollo Web Profesional</h1>
+        <p>"8° cuatrimestre"</p>
       </div>
     </div>
-  
+  </div>
 </div>
