--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" routerLink="/ejercicio1">Ejercicio1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/about">Acerca de ...</a>
+                    <a class="nav-link" routerLink="/about">Acerca de</a>
                 </li>
             </ul>
         </div>
