--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -3,7 +3,7 @@
     <!-- Sección Hero -->
     <section class="hero vh-100 d-flex flex-column justify-content-center align-items-center">
       <div class="hero-principal">
-        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/desarrollador-ejemplo.svg">
+        <img class="hero-imagen-desarrollador rounded-circle" src="/img/jocelyn.jpg">
         <h1>Hola, soy Jocelyn Magali Mancilla Blancas</h1>
         <h2 class="text-primary mb-4" id="typewriter"></h2>
       </div>
@@ -29,7 +29,7 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Desarrollo Web</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor.</p>
+            <p>Mi travesía en ingeniería de software me ha permitido aprender diseño y desarrollo web, mejorando mis habilidades mediante proyectos prácticos de creación de páginas web.</p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">HTML</span>
               <span class="badge text-bg-primary">CSS</span>
@@ -53,91 +53,6 @@
       </div>
     </section>
   
-    <!-- Proyectos -->
-    <section id="proyectos" class="proyectos-recientes seccion-clara vh-100 d-flex flex-column justify-content-center align-items-center">
-      <h2 class="seccion-titulo texto-negro">Mis proyectos recientes</h2>
-      <h3 class="seccion-descripcion">Estos son algunos proyectos que he creado recientemente...</h3>
-      
-      <!-- Carrusel de Proyectos -->
-      <div class="container text-center proyectos-contenedor">
-        <div id="proyectosCarousel" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <!-- Grupo 1 -->
-            <div class="carousel-item active">
-              <div class="d-flex justify-content-center">
-                <div class="proyecto mx-2">
-                  <img src="imagenes/proyecto1.png" alt="Proyecto 1" class="img-fluid">
-                  <div class="overlay">
-                    <p>Proyecto 1</p>
-                    <div class="iconos-contenedor">
-                      <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-github"></i>
-                      </a>
-                      <a href="#" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-laptop"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Grupo 2 -->
-            <div class="carousel-item">
-              <div class="d-flex justify-content-center">
-                <div class="proyecto mx-2">
-                  <img src="imagenes/proyecto2.png" alt="Proyecto 2" class="img-fluid">
-                  <div class="overlay">
-                    <p>Proyecto 2</p>
-                    <div class="iconos-contenedor">
-                      <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-github"></i>
-                      </a>
-                      <a href="#" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-laptop"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Grupo 3 -->
-            <div class="carousel-item">
-              <div class="d-flex justify-content-center">
-                <div class="proyecto mx-2">
-                  <img src="imagenes/proyecto3.png" alt="Proyecto 3" class="img-fluid">
-                  <div class="overlay">
-                    <p>Proyecto 3</p>
-                    <div class="iconos-contenedor">
-                      <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-github"></i>
-                      </a>
-                      <a href="#" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-laptop"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#proyectosCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Anterior</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#proyectosCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Siguiente</span>
-          </button>
-        </div>
-      </div>
-      
-      <a href="https://github.com/Jocelyn-MB" target="_blank" rel="noopener noreferrer" class="mt-4">
-        <button type="button" class="btn btn-info">
-          Ver más proyectos
-          <i class="bi bi-arrow-right-circle-fill"></i>
-        </button>
-      </a>
-    </section>
   
     <!-- Contacto -->
     <section id="contacto" class="contacto seccion-oscura vh-100 d-flex justify-content-center align-items-center">
