--- a/src/app/pages/ejercicio1/ejercicio1.component.html
+++ b/src/app/pages/ejercicio1/ejercicio1.component.html
@@ -1,8 +1,8 @@
-<div style="margin: 20px;">
+<div style="background-color:#111111;margin: 20px; padding: 20px;">
   <h1 style="color: #008578;">Catálogo de Orquídeas</h1>
   <p style="color: #CC986D;">Bienvenidos a nuestro catálogo, donde encontrarás una variedad de orquídeas exóticas y hermosas.</p>
   
-      <table class="table table-bordered border-primary" style="width: 80%; margin: 20px auto; border: 2px solid #008578;">
+      <table class="table table-dark " style="width: 100%; margin: 20px auto; border-bottom: 2px solid #008578;">
         <thead>
           <tr>
             <th>ID</th>
