--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,36 +1,45 @@
-/* home.component.scss */
 .home-container {
-    .hero-section {
+  .hero-section {
+    position: relative;
+    height: calc(100vh - 56px); /* Ocupa el 100% del viewport (altura visible de la pantalla) */
+    overflow: hidden; /* Evita que el contenido se desborde */
+
+    .hero-image {
       position: relative;
-      height: 100vh; 
-      overflow: hidden;
-  
-      .hero-image {
-        background-image: url('https://e.sport.fr/wp-content/uploads/2024/03/42921-1v3bhdqjucldlbnwiajj4uq.webp'); /* Nueva URL de la imagen de Riot Games */
-        background-size: cover;
-        background-position: center;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: white;
-        text-align: center;
-  
-        .hero-text {
-          background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente para el texto */
-          padding: 20px;
-          border-radius: 10px;
-  
-          h1 {
-            font-size: 3rem;
-            margin-bottom: 10px;
-          }
-  
-          p {
-            font-size: 1.5rem;
-          }
-        }
-      }
+      height: 100%; /* Ocupa el 100% del contenedor padre (.hero-section) */
+      width: 100%; /* Ocupa el 100% del ancho */
     }
-       
+
+    .hero-background {
+      width: 100%; /* Ocupa todo el ancho */
+      height: 100%; /* Ocupa toda la altura */
+      object-fit: cover; /* Ajusta la imagen al contenedor sin distorsionar */
+      position: absolute; /* Posiciona la imagen detrás del texto */
+      top: 0;
+      left: 0;
+      z-index: 1; /* Coloca la imagen detrás del texto */
+    }
+
+    .hero-text {
+      position: absolute; /* Posiciona el texto encima de la imagen */
+      z-index: 2; /* Coloca el texto por encima de la imagen */
+      background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+      text-align: center;
+      top: 50%; /* Centra el texto verticalmente */
+      left: 50%; /* Centra el texto horizontalmente */
+      transform: translate(-50%, -50%); /* Ajusta el centrado */
+    }
+
+    .hero-text h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    .hero-text p {
+      font-size: 1.5rem;
+    }
   }
+}
