--- a/src/app/pages/libro/libro.component.html
+++ b/src/app/pages/libro/libro.component.html
@@ -37,7 +37,7 @@
         </div>
         <div class="col-md-8"> <!-- Tabla ocupa 8 columnas en pantallas medianas y grandes -->
             <h4 class="text-white">Listado de Libros</h4>
-            <table class="table table-dark">
+            <table class="table table-dark" style="width: 100%; margin: 20px auto; border-bottom: 2px solid #3D2D2E;">
                 <thead>
                     <tr>
                         <th>Título</th>
